--- a/src/com/maplerain/termmanager/view/RootLayout.fxml
+++ b/src/com/maplerain/termmanager/view/RootLayout.fxml
@@ -15,6 +15,8 @@
                   <MenuItem mnemonicParsing="false" onAction="#handleOpen" text="Open..." />
                   <MenuItem mnemonicParsing="false" onAction="#handleSave" text="Save" />
                   <MenuItem mnemonicParsing="false" onAction="#handleSaveAs" text="Save As..." />
+                  <MenuItem mnemonicParsing="false" onAction="#handleImport" text="Import" />
+                  <MenuItem mnemonicParsing="false" onAction="#handleExport" text="Export" />
               <MenuItem mnemonicParsing="false" onAction="#handleExit" text="Exit" />
             </items>
           </Menu>
